# hh-data-processing

./: README.md  analyze_columns.py  app.py  check_results.py  columns_list.txt  config.yaml  pyproject.toml  requirements.txt  y_data.npy
src/pipeline/: __init__.py  base_handler.py  handlers.py  pipeline.py
src/utils/: __init__.py  logger.py
